--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -1,2 +1,10 @@
 $main-bg-color   : #ffff00;
 $header-bg-color : #000;
+
+//basics
+$c-white : #fff;
+$c-black : #000;
+
+//layout
+$footer-bg-color: #0F314B;
+$footer-aux-color: #123652;
