--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -8,3 +8,7 @@ $c-black : #000;
 //layout
 $footer-bg-color: #0F314B;
 $footer-aux-color: #123652;
+$footer-input-color: #1D4A6D;
+$footer-button-color: #3C82B9;
+$footer-social-color: #3C82B9;
+$footer-border-color: #204867;
