--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -1,3 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700');
+@import url('https://fonts.googleapis.com/css?family=Raleway:300,400,400i,500,600,700');
 
 $font-raleway : 'Raleway', sans-serif; //regular 400, medium 500, semi-bold 600, bold 700
