--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,8 +3,11 @@
 // --------------------
 @import "../../node_modules/bootstrap/dist/css/bootstrap.css";
 // @import "../../node_modules/bootstrap/dist/css/bootstrap-theme.css";
-@import "_fonts";
 @import "_colors";
+@import "_fonts";
+@import "_form";
+@import "_buttons";
+
 @import "_header";
 @import "_footer";
 
