Add styles of footer

--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -12,3 +12,4 @@ $footer-input-color: #1D4A6D;
 $footer-button-color: #3C82B9;
 $footer-social-color: #3C82B9;
 $footer-border-color: #204867;
+$footer-sep-color: #17405F;
