--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -1,3 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway:300,400,400i,500,600,700');
+// @import url('https://fonts.googleapis.com/css?family=Raleway:300,400,400i,500,600,700');
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display|Raleway');
 
 $font-raleway : 'Raleway', sans-serif; //regular 400, medium 500, semi-bold 600, bold 700
+$font-playfair : 'Playfair Display', serif; //regular
