--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -24,17 +24,28 @@ footer {
       }
     }
 
+    &__logo {
+      max-width: 226px;
+    }
+
     &__social {
       margin-bottom: 64px;
       margin-top: 23px;
 
       li {
+        &:not(:last-child) {
+          margin-right: 22px;
+        }
+
         a {
           background-color: $footer-social-color;
           border-radius: 50%;
           display: block;
-          height: 24px;
-          width: 24px;
+
+          img {
+            height: 24px;
+            width: 24px;
+          }
         }
       }
     }
@@ -42,7 +53,7 @@ footer {
     &__label {
       display: block;
       font-size: 14px;
-      font-weight: 500;
+      font-weight: 600;
       margin: 0 auto 31px;
       max-width: 205px;
       text-align: center;
@@ -50,6 +61,12 @@ footer {
       @media (min-width: 576px) {
         margin: 0 0 31px;
         text-align: left;
+      }
+
+      span {
+        font-family: $font-playfair;
+        font-style: italic;
+        font-size: 19px;
       }
     }
 
@@ -81,9 +98,39 @@ footer {
       margin: 0;
     }
 
+    &__search {
+      display: block;
+      text-align: center;
+
+      @media (min-width: 992px) {
+        border-left: solid 1px rgba($footer-border-color, .73);
+        border-right: solid 1px rgba($footer-border-color, .73);
+      }
+
+      img {
+        max-width: 24px;
+      }
+    }
+
     &__lang {
+      appearance: none;
+      background-color: transparent;
+      border: 0;
+      color: $c-white;
       font-size: 11px;
       font-weight: 400;
+      outline: 0;
+
+      &:after {
+        color: $footer-border-color;
+        vertical-align: 0.18em;
+      }
+
+      &:hover,
+      &:focus,
+      &:active {
+        background-color: transparent;
+      }
     }
   }
 }
