--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -4,6 +4,7 @@ $header-bg-color : #000;
 //basics
 $c-white : #fff;
 $c-black : #000;
+$c-blue-dark : #0F314B;
 
 //layout
 $footer-bg-color: #0F314B;
