--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -6,14 +6,32 @@ header {
   }
 
   &.header-blc {
+
+    .header-blc__megamenu {
+      border: 1px solid red;
+      position: absolute;
+      top: 0;
+
+      .dropdown-menu div[class*="col"] {
+        margin-bottom:1rem;
+        border: 1px solid red;
+      }
+
+      .dropdown-menu {
+        border:none;
+        background-color:#0060c8!important;
+      }
+    }
+
     .navbar {
       &-primary {
         background-color: $c-white !important;
-        padding-bottom: 18px;
-        padding-top: 17px;
+        padding-bottom: 19px;
+        padding-top: 18px;
 
         .navbar-brand {
           padding: 0;
+          z-index: 110;
 
           img {
             max-width: 180px;
@@ -162,9 +180,88 @@ header {
               }
             }
 
+            &.dropdown--megamenu {
+              position: fixed;
+              left: 0;
+              top: 0;
+              z-index: 100;
 
+              .dropdown-toggle {
+                background-color: $c-blue;
+                height: 110px;
+              }
+            }
           }
         }
+
+        /* adds some margin below the link sets  */
+        &.navbar .dropdown-menumega div[class*="col"] {
+          margin-bottom:1rem;
+          border: 1px solid red;
+        }
+
+        &.navbar .dropdown-menumega {
+          // background-color: #0060c8!important;
+          border: none;
+        }
+
+        /* breakpoint and up - mega dropdown styles */
+        @media screen and (min-width: 992px) {
+
+            /* remove the padding from the navbar so the dropdown hover state is not broken */
+          // &.navbar {
+          //   padding-top:0px;
+          //   padding-bottom:0px;
+          // }
+
+          /* remove the padding from the nav-item and add some margin to give some breathing room on hovers */
+          // &.navbar .nav-item {
+          //   padding:.5rem .5rem;
+          //   margin:0 .25rem;
+          // }
+
+          /* makes the dropdown full width  */
+          .dropdown--megamenu {
+            position:static;
+          }
+
+          .dropdown-menumega {
+            background-color: transparent!important;
+            border-radius: 0;
+            left:0;
+            margin: 0;
+            right:0; /*  height of nav-item  */
+            top:0;
+            width:100%;
+            z-index: -1;
+
+            &.show {
+              background-color: $c-white!important;
+
+              &::before {
+                background-color: $c-blue;
+                content: '';
+                height: 100%;
+                left: 0;
+                position: absolute;
+                top: 0;
+                width: 70px;
+              }
+            }
+          }
+
+          /* shows the dropdown menu on hover */
+          // &.navbar .dropdown:hover .dropdown-menu,
+          // &.navbar .dropdown .dropdown-menu:hover {
+          //   display:block!important;
+          // }
+
+          // &.navbar .dropdown-menu {
+          //   border: 1px solid rgba(0,0,0,.15);
+          //   background-color: #fff;
+          // }
+        }
+
       }
     }
   }
