Add styles of header

--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -10,6 +10,7 @@ $c-blue-dark : #0F314B;
 //layout
 $header-secondary-bg-color : #053A64;
 $header-button-color: #3C82B9;
+$header-megamenu-link-color: #053A64;
 
 $footer-bg-color: #0F314B;
 $footer-aux-color: #123652;
