Add styles of header

--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -11,6 +11,8 @@ $c-blue-dark : #0F314B;
 $header-secondary-bg-color : #053A64;
 $header-button-color: #3C82B9;
 $header-megamenu-link-color: #053A64;
+$header-megamenu-sublink-color: #3C82B9;
+$header-megamenu-border-color: #CCCCCC;
 
 $footer-bg-color: #0F314B;
 $footer-aux-color: #123652;
