--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -1,5 +1,7 @@
 // @import url('https://fonts.googleapis.com/css?family=Raleway:300,400,400i,500,600,700');
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display|Raleway');
+@import url('https://fonts.googleapis.com/css?family=Work+Sans:400,500,600,700&display=swap');
 
 $font-raleway : 'Raleway', sans-serif; //regular 400, medium 500, semi-bold 600, bold 700
 $font-playfair : 'Playfair Display', serif; //regular
+$font-ws: 'Work Sans', sans-serif; //regular 400, medium 500, semi-bold 600, bold 700
