--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -8,7 +8,7 @@ header {
   &.header-blc {
 
     .header-blc__megamenu {
-      border: 1px solid red;
+      // border: 1px solid red;
       position: absolute;
       top: 0;
 
@@ -138,8 +138,8 @@ header {
 
       &-secondary {
         background-color: $header-secondary-bg-color;
-        padding-bottom: 17px;
-        padding-top: 17px;
+        padding-bottom: 0;
+        padding-top: 0;
         // min-height: $navbar_secondary--height;
 
         // &.navbar-fixed-top {
@@ -165,6 +165,14 @@ header {
             align-items: center;
             width: 100%;
 
+            @media (min-width: 992px) {
+              justify-content: center;
+            }
+
+            @media (min-width: 1200px) {
+              justify-content: flex-start;
+            }
+
             &.active {
               a {
                 color: $c-white;
@@ -173,28 +181,43 @@ header {
 
             a {
               color: $c-white;
+              border-bottom: solid 3px transparent;
               font-weight: 600;
               font-size: 14px;
               line-height: 16px;
+              padding-bottom: 21px;
+              padding-top: 25px;
 
               &:hover {
                 color: $c-white;
+                border-bottom: solid 3px $c-blue;
               }
 
               &.nav-link--button {
+                align-items:center;
                 background-color: $header-button-color;
+                border: 0;
                 border-radius: 30px;
+                display: flex;
+                justify-content: space-around;
                 max-width: 195px;
+                padding-bottom: 9px;
+                padding-top: 9px;
                 text-align: center;
                 width: 100%;
+
+                img {
+                  max-width: 18px;
+                }
               }
             }
 
             &.dropdown--megamenu {
-              // display: none;
+              display: none;
+              @media (min-width: 1200px) {
+              display: block;
               width: 75px;
 
-              @media (min-width: 1200px) {
                 // border: 1px solid red;
                 // display: flex;
                 position: fixed;
@@ -205,6 +228,78 @@ header {
                 .dropdown-toggle {
                   background-color: $c-blue;
                   height: 110px;
+                  font-family: $font-ws;
+                  font-size: 9px;
+                  padding-top: 52px;
+                  text-align: center;
+                  position: relative;
+                  width: 70px;
+
+                  &:after {
+                    display: none;
+                  }
+
+                  .hamburger {
+                    top: 40px;
+                    left: 0;
+                    width: 17px;
+                    height: 2.5px;
+                    background: #fff;
+                    border-radius: 2px;
+                    position: absolute;
+                    // box-shadow: 0 2px 5px rgba(0, 0, 0, .2);
+                    transition: 0.5s;
+
+                    &:before {
+                      left: 0;
+                      top: -6px;
+                    }
+
+                    &:after {
+                      left: 0;
+                      top: 6px;
+                    }
+                  }
+
+                  .icon-three {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 21px;
+                    height: 55px;
+                    cursor: pointer;
+                    right: 0;
+                    margin: 0 auto;
+                  }
+
+                  .hamburger-three:before,
+                  .hamburger-three:after {
+                    content: '';
+                    position:absolute;
+                    width: 21px;
+                    height: 2.5px;
+                    background:#fff;
+                    border-radius: 2px;
+                    // box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+                    transition:0.5s;
+                  }
+
+                  .icon-three.active-three .hamburger-three {
+                    // background:rgba(0,0,0,0);
+                    // box-shadow: 0 2px 5px rgba(0, 0, 0, 0);
+                  }
+
+                  .icon-three.active-three .hamburger-three:before {
+                    top: 0;
+                    transform:rotate(135deg);
+                    // box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
+                  }
+
+                  .icon-three.active-three .hamburger-three:after {
+                    top: 0;
+                    transform:rotate(225deg);
+                    // box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
+                  }
                 }
               }
             }
@@ -215,7 +310,10 @@ header {
 
                 a {
                   // border: 1px solid yellow;
+                  border: 0;
+                  padding-bottom: 0.5rem;
                   padding-left: 10px;
+                  padding-top: 0.5rem;
 
                   &:hover {
                     // color: $c-blue;
@@ -346,7 +444,7 @@ header {
               }
             }
 
-            ul {
+            ul.nav {
               li {
                 a {
                   color: $header-megamenu-link-color;
@@ -359,6 +457,7 @@ header {
             }
 
            &__bottomlinks {
+             align-items: center;
               border-top: solid 1px rgba($header-megamenu-border-color, .3);
               display: flex;
               padding-bottom: 25px;
@@ -370,10 +469,22 @@ header {
                 flex-direction: row;
 
                 a {
-                  color: $header-megamenu-sublink-color !important;
+                  border: 0;
+                  color: $header-megamenu-sublink-color;
                   font-family: $font-ws;
                   font-size: 16px;
                   font-weight: 600;
+                  padding: 0;
+                  text-decoration: none;
+
+                  &:hover {
+                    border: 0;
+                    color: $header-megamenu-sublink-color;
+                  }
+
+                  &.btn-fale {
+                    color: $c-white;
+                  }
                 }
               }
             }
