Add styles of header

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -8,13 +8,11 @@ header {
   &.header-blc {
 
     .header-blc__megamenu {
-      // border: 1px solid red;
       position: absolute;
       top: 0;
 
       .dropdown-menu div[class*="col"] {
-        margin-bottom:1rem;
-        border: 1px solid red;
+        margin-bottom: 1rem;
       }
 
       .dropdown-menu {
@@ -39,9 +37,42 @@ header {
         }
 
         .navbar-nav {
+          margin-right: 19px;
+
           li {
             display: flex;
             align-items: center;
+
+            @media (min-width: 992px) {
+              &:nth-child(3) {
+                margin-right: 20px;
+              }
+
+              &.nav-item--sep {
+                position: relative;
+                padding: 0 15px;
+
+                .nav-link--arrow {
+                  padding-left: 0;
+                  padding-right: 0;
+                }
+
+                &:after {
+                  border-left: solid 1px rgba($c-blue, .04);
+                  content: '';
+                  display: block;
+                  height: 25px;
+                  position: absolute;
+                  right: 0;
+                }
+              }
+            }
+
+            @media (min-width: 1200px) {
+              &.nav-item--sep {
+                padding: 0 25px;
+              }
+            }
 
             a {
               color: $c-blue-dark !important;
@@ -49,41 +80,19 @@ header {
               font-size: 14px;
               line-height: 16px;
 
+              @media (min-width: 992px) {
+                font-size: 12px;
+              }
+
+              @media (min-width: 1200px) {
+                font-size: 14px;
+               }
+
               & > img {
                 max-width: 24px;
               }
 
-              &.nav-link--arrow {
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                position: relative;
-                width: 80%;
-
-                &:after {
-                  // flex: 0 0 auto;
-                  // background-color: $c-blue;
-                  border-left: solid 1px rgba($c-blue, .04);
-                  // border-radius: 50%;
-                  content: '';
-                  display: block;
-                  height: 25px;
-                  // width: 15px;
-                  position: absolute;
-                  right: 0;
-                }
-                // span {
-                //   flex: 0 0 auto;
-                //   background-color: $c-blue;
-                //   border-radius: 50%;
-                //   content: '';
-                //   display: block;
-                //   height: 15px;
-                //   width: 15px;
-                //   position: absolute;
-                //   right: 0;
-                // }
-              }
+              &.nav-link--arrow {}
             }
           }
         }
@@ -127,11 +136,16 @@ header {
             border-radius: 19px;
             color: $c-blue;
             display: flex;
-            font-size: 16px;
+            font-size: 12px;
             font-weight: bold;
             justify-content: center;
+            margin-left: 18px;
             padding: 5px 0;
             width: 110px;
+
+            @media (min-width: 1200px) {
+              font-size: 16px;
+            }
           }
         }
       }
@@ -183,10 +197,14 @@ header {
               color: $c-white;
               border-bottom: solid 3px transparent;
               font-weight: 600;
-              font-size: 14px;
+              font-size: 12px;
               line-height: 16px;
               padding-bottom: 21px;
               padding-top: 25px;
+
+              @media (min-width: 1200px) {
+                font-size: 14px;
+              }
 
               &:hover {
                 color: $c-white;
@@ -212,14 +230,37 @@ header {
               }
             }
 
+            &.dropdown {
+              position: inherit;
+
+              .dropdown-menu {
+                background-color: $header-submenu-bg-color;
+                border: 0;
+                border-radius: 0;
+                margin: 0;
+                padding-bottom: 30px;
+                padding-top: 40px;
+                width: 100%;
+
+                a {
+                  border: 0;
+                  padding-bottom: 12px;
+                  padding-top: 0;
+
+                  &:hover {
+                    background-color: transparent;
+                    border: 0;
+                    text-decoration: underline;
+                  }
+                }
+              }
+            }
+
             &.dropdown--megamenu {
               display: none;
               @media (min-width: 1200px) {
-              display: block;
-              width: 75px;
-
-                // border: 1px solid red;
-                // display: flex;
+                display: block;
+                width: 75px;
                 position: fixed;
                 left: 0;
                 top: 0;
@@ -280,25 +321,17 @@ header {
                     height: 2.5px;
                     background:#fff;
                     border-radius: 2px;
-                    // box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
                     transition:0.5s;
-                  }
-
-                  .icon-three.active-three .hamburger-three {
-                    // background:rgba(0,0,0,0);
-                    // box-shadow: 0 2px 5px rgba(0, 0, 0, 0);
                   }
 
                   .icon-three.active-three .hamburger-three:before {
                     top: 0;
                     transform:rotate(135deg);
-                    // box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
                   }
 
                   .icon-three.active-three .hamburger-three:after {
                     top: 0;
                     transform:rotate(225deg);
-                    // box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
                   }
                 }
               }
@@ -309,15 +342,10 @@ header {
               .nav-item {
 
                 a {
-                  // border: 1px solid yellow;
                   border: 0;
                   padding-bottom: 0.5rem;
                   padding-left: 10px;
                   padding-top: 0.5rem;
-
-                  &:hover {
-                    // color: $c-blue;
-                  }
                 }
 
                 &--collapse {
@@ -364,10 +392,7 @@ header {
           }
         }
 
-        /* adds some margin below the link sets  */
         &.navbar .dropdown-menumega div[class*="col-md-4"] {
-          // border: 1px solid red;
-          // margin-bottom:1rem;
           padding-top: 130px;
         }
 
@@ -376,14 +401,13 @@ header {
         }
 
         &.navbar .dropdown-menumega {
-          // background-color: #0060c8!important;
           border: none;
         }
 
         /* breakpoint and up - mega dropdown styles */
         @media screen and (min-width: 992px) {
 
-            /* remove the padding from the navbar so the dropdown hover state is not broken */
+          /* remove the padding from the navbar so the dropdown hover state is not broken */
           // &.navbar {
           //   padding-top:0px;
           //   padding-bottom:0px;
@@ -501,7 +525,6 @@ header {
           //   background-color: #fff;
           // }
         }
-
       }
     }
   }
