--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -13,6 +13,7 @@ $header-button-color: #3C82B9;
 $header-megamenu-link-color: #053A64;
 $header-megamenu-sublink-color: #3C82B9;
 $header-megamenu-border-color: #CCCCCC;
+$header-submenu-bg-color: #0F314B;
 
 $footer-bg-color: #0F314B;
 $footer-aux-color: #123652;
