--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -294,8 +294,8 @@ header {
               @media (min-width: 1200px) {
                 display: block;
                 left: 0;
-                position: fixed;
-                top: 0;
+                position: absolute;
+                top: -110px;
                 z-index: 100;
                 width: 75px;
 
