Add carousel styles

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,6 +1,7 @@
 //
 // import stylesheets
 // --------------------
+
 @import "../../node_modules/bootstrap/dist/css/bootstrap.css";
 // @import "../../node_modules/bootstrap/dist/css/bootstrap-theme.css";
 @import "_colors";
@@ -10,6 +11,8 @@
 
 @import "_header";
 @import "_footer";
+@import "_slider";
+
 
 //
 // geral
