--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -9,6 +9,7 @@ $header-bg-color : #000;
 $c-white : #fff;
 $c-black : #000;
 $c-blue: #3C82B9;
+$c-blue-medium : #3C82B9;
 $c-blue-dark : #0F314B;
 
 //layout
