Add carousel highlights styles

--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -11,6 +11,7 @@ $c-black : #000;
 $c-blue: #3C82B9;
 $c-blue-medium : #3C82B9;
 $c-blue-dark : #0F314B;
+$c-blue-light: #98C7EB;
 
 //layout
 $header-secondary-bg-color : #053A64;
