--- a/src/sass/_highlights.scss
+++ b/src/sass/_highlights.scss
@@ -3,9 +3,10 @@
 // --------------------
 
 .mc-highlights {
+  margin-top: -140px;
 
   .carousel {
-    height: 140px;
+    // height: 140px;
 
     &-nav {
       background-color: $c-blue;
@@ -24,11 +25,19 @@
       }
 
       a {
+        align-items: center;
         background-color: $c-white;
         border: 0;
         border-radius: 0;
+        display: flex;
         height: 33px;
+        justify-content: center;
         width: 35px;
+
+        i {
+          color: $c-blue;
+          font-size: 10px;
+        }
       }
 
     }
@@ -43,7 +52,58 @@
         &.active {
           display: flex;
         }
+      }
+    }
 
+    &-item {
+      p, span, a {
+        color: $c-white;
+      }
+
+      &__header {
+        margin-bottom: 6px;
+        margin-right: auto;
+
+        .date {
+          color: $c-blue-light;
+          font-size: 13px;
+          font-weight: 600;
+        }
+
+        .label {
+          background-color: $c-blue-light;
+          border-radius: 16px;
+          font-size: 10px;
+          font-weight: 600;
+          padding: 5px 13px;
+        }
+      }
+
+      &__body {
+        p {
+          font-size: 14px;
+          font-weight: 700;
+          line-height: 16px;
+          margin-bottom: 5px;
+        }
+      }
+
+      &__footer {
+        align-items: center;
+        border-top: solid 1px $c-blue-light;
+        display: flex;
+        width: 100%;
+
+        a {
+          color: $c-white;
+          font-size: 12px;
+          font-style: italic;
+          margin-top: 5px;
+
+          i {
+            margin-left: 5px;
+          }
+        }
       }
     }
   }
