--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,6 +4,7 @@
 
 @import "../../node_modules/bootstrap/dist/css/bootstrap.css";
 // @import "../../node_modules/bootstrap/dist/css/bootstrap-theme.css";
+// @import "scss/fontawesome";
 @import "_colors";
 @import "_fonts";
 @import "_form";
