--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -12,6 +12,7 @@ $c-blue: #3C82B9;
 $c-blue-medium : #3C82B9;
 $c-blue-dark : #0F314B;
 $c-blue-light: #98C7EB;
+$c-gray: #F7F7F7;
 
 //layout
 $header-secondary-bg-color : #053A64;
