--- a/src/sass/_form.scss
+++ b/src/sass/_form.scss
@@ -15,6 +15,7 @@
 
     &:focus {
       background-color: $footer-input-color;
+      color: $c-white;
     }
 
     &::-webkit-input-placeholder {
