--- a/src/sass/_highlights.scss
+++ b/src/sass/_highlights.scss
@@ -4,8 +4,9 @@
 
 .mc-highlights {
   margin-top: -140px;
-  position: relative;
+  position: absolute;
   z-index: 10;
+  width: 100%;
 
   .carousel {
 
