--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,11 +9,13 @@
 @import "_fonts";
 @import "_form";
 @import "_buttons";
+@import "_titles";
 
 @import "_header";
 @import "_footer";
 @import "_slider";
 @import "_highlights";
+@import "_news";
 
 
 //
