Add latest news styles

--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -11,8 +11,9 @@ $c-black : #000;
 $c-blue: #3C82B9;
 $c-blue-medium : #3C82B9;
 $c-blue-dark : #0F314B;
-$c-blue-light: #98C7EB;
-$c-gray: #F7F7F7;
+$c-blue-light : #98C7EB;
+$c-gray : #F7F7F7;
+$c-gray2 : #9FACB7;
 
 //layout
 $header-secondary-bg-color : #053A64;
