--- a/src/sass/_news.scss
+++ b/src/sass/_news.scss
@@ -4,6 +4,7 @@
 
 .mc-latestnews {
   background-color: $c-gray;
+  padding-bottom: 47px;
   padding-top: 80px;
 
   .main-subtitle {
@@ -12,7 +13,45 @@
   }
 
   &__card {
-    border: 1px solid red;
+    background-color: $c-white;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    margin-bottom: 30px;
+    position: relative;
+    overflow: hidden;
+
+    &--v2 {
+      border-radius: 0;
+      display: flex;
+
+      .mc-latestnews__image {
+        flex-shrink: 0;
+        width: 150px;
+      }
+
+      .mc-latestnews__header {
+        padding: 9.5px 18px;
+
+        .date {
+          font-size: 14px;
+        }
+
+        .label {
+          font-size: 10px;
+          padding: 4px 13px 4px 13px;
+        }
+      }
+
+      .mc-latestnews__body {
+        padding: 10px 18px;
+
+        p {
+          font-size: 14px;
+          line-height: 16px;
+          margin: 0;
+        }
+      }
+    }
   }
 
   &__image {
@@ -20,6 +59,75 @@
       height: 100%;
       object-fit: cover;
       width: 100%;
+    }
+  }
+
+  &__header {
+    align-items: center;
+    border: {
+      bottom: {
+        color: rgba($c-gray2, .1);
+        style: solid;
+        width: 1px;
+      }
+    }
+    display: flex;
+    justify-content: space-between;
+    padding: 14.5px 20px;
+
+    .date {
+      color: $c-blue;
+      font-size: 18px;
+      font-weight: 500;
+    }
+
+    .label {
+      background-color: $c-blue;
+      color: $c-white;
+      border-radius: 16px;
+      font-size: 12px;
+      font-weight: 500;
+      line-height: 12px;
+      padding: 7.5px 13px 5.5px 13px;
+    }
+  }
+
+  &__body {
+    padding: 10px 24px 50px;
+
+    p {
+      color: $c-blue-dark;
+      font: {
+        size: 16px;
+        weight: 600;
+      }
+      line-height: 23px;
+    }
+  }
+
+  &__footer {
+    background: linear-gradient(#f9f9f9, $c-white);
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+
+    ul {
+      align-items: center;
+      display: flex;
+      justify-content: space-around;
+      padding: 11.5px 0;
+      margin: 0;
+
+      li {
+        display: inline;
+
+        a {
+          color: rgba($c-blue-dark, .4);
+          font-size: 14px;
+          text-decoration: underline;
+        }
+      }
     }
   }
 }
